Added a Response wrapper class and edited all JavaDoc, tests and controllers, related to the change.